...
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lstMyExercises"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/addExerciseButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.9"
        android:onClick="openExerciseSelectionActivity"/>

    <Button
        android:id="@+id/startWorkoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:scaleType="fitCenter"
...
