<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomePageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/card_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/circularProgressButton"
            android:layout_width="63dp"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:contentDescription="Increment water progress"
            android:onClick="incrementAndUpdateWaterTracker"
            android:padding="10dp"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="@+id/circularProgressView"
            app:layout_constraintEnd_toEndOf="@+id/circularProgressView"
            app:layout_constraintStart_toStartOf="@+id/circularProgressView"
            app:layout_constraintTop_toTopOf="@+id/circularProgressView"
            app:srcCompat="@drawable/glass" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/circularProgressView"
            android:layout_width="99dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            app:indicatorColor="@color/water_blue"
            app:indicatorSize="58dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblGreetings"
            app:layout_constraintVertical_bias="0.0"
            app:trackColor="@color/white"
            app:trackCornerRadius="100dp"
            app:trackThickness="5dp" />

        <TextView
            android:id="@+id/lblGreetings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="Hi Rob!"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnGymHours"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:onClick="openGymHoursActivity"
            android:text="Gym Hours"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/circularProgressButton"
            app:layout_constraintTop_toBottomOf="@+id/lblGreetings"
            app:layout_constraintVertical_bias="0.617" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtMyWorkouts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="My Workouts"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLayout" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:onClick="toggleEditMode"
        android:padding="0dp"
        android:text="Edit"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@id/txtMyWorkouts"
        app:layout_constraintStart_toEndOf="@id/txtMyWorkouts"
        app:layout_constraintTop_toTopOf="@id/txtMyWorkouts" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lstMyWorkouts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnViewPrevWorkouts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMyWorkouts" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addWorkoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:onClick="newWorkoutDialog"
        android:scaleType="fitCenter"
        app:fabCustomSize="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:srcCompat="@drawable/add_icon" />

    <Button
        android:id="@+id/btnViewPrevWorkouts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:onClick="viewPreviousWorkoutsButtonClicked"
        android:text="View Previous Workouts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
